--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	// https://mvnrepository.com/artifact/com.google.guava/guava
-	//implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
-
+	implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+	implementation group: 'io.jsonwebtoken', name:'jjwt', version: '0.9.1'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 }
 
 tasks.named('test') {
